--- a/client/src/components/screens/PrivateScreen.css
+++ b/client/src/components/screens/PrivateScreen.css
@@ -12,12 +12,40 @@
     /* box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
     background: #fff; */
   }
-  .private-screen__logout {
+  .private-screen__button {
     align-items: center;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    width: 100px;
+    min-width: 130px;
+    max-width: fit-content;
+  }
+  
+  .private-screen {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .private-screen__form {
+    width: 380px;
+    padding: 1.5rem;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    background: #fff;
+    margin-bottom: 50px;
+  }
+  
+  .private-screen__title {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  
+  .private-screen__subtext {
+    font-size: 0.7rem;
+    display: block;
+    margin: 0.5rem 0;
   }
   
   
